<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUpdateEnterprise">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_name"
            android:padding="@dimen/view_padding"
            android:textSize="@dimen/add_edit_textsize"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/edit_text_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_url"
            android:inputType="textUri"
            android:padding="@dimen/view_padding"
            android:textSize="@dimen/add_edit_textsize" />

        <EditText
            android:id="@+id/edit_text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_phone"
            android:padding="@dimen/view_padding"
            android:textSize="@dimen/add_edit_textsize"
            android:inputType="phone" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/view_padding"
            android:textSize="@dimen/add_edit_textsize" />

        <EditText
            android:id="@+id/edit_products_and_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_products_and_services"
            android:padding="@dimen/view_padding"
            android:textSize="@dimen/add_edit_textsize"
            android:inputType="textMultiLine" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/view_padding">

            <TextView
                android:id="@+id/text_view_classification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="25dp"
                android:text="@string/classification"
                android:textSize="@dimen/add_edit_textsize" />

            <RadioGroup
                android:id="@+id/radio_classification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="25dp">


                <RadioButton
                    android:id="@+id/radio_consulting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/string_consulting"
                    android:textSize="@dimen/add_edit_textsize" />

                <RadioButton
                    android:id="@+id/radio_tailored_development"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_tailored_development"
                    android:textSize="@dimen/add_edit_textsize" />

                <RadioButton
                    android:id="@+id/radio_software_factory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_software_factory"
                    android:textSize="@dimen/add_edit_textsize" />

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/button_add_update_enterprise"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/button_padding"
            android:text="@string/add_enterprise" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>