<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal">

        <TextView android:text="@string/choose_menu" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/header_margin"
            android:paddingRight="@dimen/header_margin"
            android:paddingLeft="@dimen/header_margin"
            android:paddingBottom="@dimen/header_bottom_margin"
            android:textSize="@dimen/text_size"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:gravity="clip_horizontal" />
        <Button
            android:id="@+id/button_add_enterprise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_enterprise"/>

        <Button
            android:id="@+id/button_edit_enterprise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_enterprise"/>

        <Button
            android:id="@+id/button_delete_enterprise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_enterprise"/>

        <Button
            android:id="@+id/button_view_enterprises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_all_enterprises"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>